<resources>
    <string name="app_name">KenGuru</string>
    <string name="welcome">\"Greetings, user! I\'m happy to see you among us.\"</string>
    <string name="or">Or</string>
    <string name="settings">Settings</string>
    <string name="success">Success!</string>

    <!-- PASSWORD -->
    <string name="password">Password</string>
    <string name="password_lwr">password</string>
    <string name="password_reset">Reset password</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="password_invalid">Invalid password</string>
    <string name="password_invalid_length">Password must be >5 characters</string>
    <string name="password_new">new password...</string>

    <!-- EMAIL -->
    <string name="email">Email</string>
    <string name="email_change">Change email?</string>
    <string name="email_lwr">email</string>
    <string name="email_new">new email...</string>
    <string name="email_set">Set new email</string>

    <string name="firstname">first name</string>
    <string name="lastname">last name</string>
    
    <!-- USERNAME -->
    <string name="username_changed">Changed username to: </string>
    <string name="username_invalid">Not a valid username</string>
    <string name="username_lwr">username</string>
    <string name="username_new">new username...</string>
    <string name="username_set">Set username</string>

    <!-- ACTIONS -->
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit your profile.</string>
    <string name="feedback">Send feedback to developers</string>
    <string name="fetching">Fetching your daily quote…</string>
    <string name="user_delete">Delete user</string>
    <string name="rate">Rate on Play Store</string>
    <string name="sent_email">Email sent</string>
    <string name="save">Save</string>
    <string name="sign_in">Login</string>
    <string name="sign_in_register">Sign in or register</string>
    <string name="sign_out">Logout</string>
    <string name="sign_up">Register</string>

    <!-- ERRORS / WARNINGS -->
    <string name="check_connection">Please check your internet connection.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="something_wrong">Oops. Something went wrong.</string>

    <!-- GREETINGS - use ~ as a delimiter  -->
    <string name="greetings">Take control~Take charge~Master life~Create order~Become independent~Go all out~Walk the extra mile~Get hyped~Embrace chaos~Let go of limitations</string>

</resources>
