<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_lwr"
        android:inputType="textEmailAddress"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_lwr"
        android:inputType="textPassword"
        android:autofillHints="AUTOFILL_HINT_NEW_PASSWORD" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_lwr"
        android:inputType="text"
        android:autofillHints="AUTOFILL_HINT_NEW_USERNAME" />

    <Button
        android:id="@+id/su_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@color/orange_light"
        android:backgroundTintMode="add"
        android:onClick="register"
        android:text="@string/sign_up" />

</LinearLayout>