<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    >

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/logo"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_lwr"
        android:inputType="textEmailAddress"
        android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_lwr"
        android:inputType="textPassword"
        android:autofillHints="AUTOFILL_HINT_PASSWORD"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/password_forgot"
        android:onClick="resPass"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/su_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/orange_light"
            android:backgroundTintMode="add"
            android:onClick="register"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/si_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@color/orange_light"
            android:layout_margin="10dp"
            android:onClick="login"
            />

    </LinearLayout>


</LinearLayout>
</ScrollView>